--- a/.github/workflows/schemachange_cicd.yml
+++ b/.github/workflows/schemachange_cicd.yml
@@ -15,6 +15,13 @@ jobs:
       steps:
         - name: checkout repository
           uses: actions/checkout@v3
+
+        - name: Use Python 3.8.x
+          uses: actions/setup-python@v2.2.1
+          with:
+              python-version: 3.8.x
+
+
         - name: 'Install Dependencies'
           shell: bash
           run: |
