added full name

--- a/.github/workflows/schemachange_cicd.yml
+++ b/.github/workflows/schemachange_cicd.yml
@@ -20,12 +20,12 @@ jobs:
 
         - name: 'run schema change'
           env:
-            SF_ACCOUNT: ${{secrets.SF_ACCOUNT}}
-            SF_USER: ${{secrets.SF_USER}}
-            SF_PASSWORD: ${{secrets.SF_PASSWORD}}
-            SF_WAREHOUSE: ${{secrets.SF_WAREHOUSE}}
-            SF_ROLE: ${{secrets.SF_ROLE}}
-            SF_DB: ${{secrets.SF_DB}}
+            SNOWFLAKE_ACCOUNT: ${{secrets.SF_ACCOUNT}}
+            SNOWFLAKE_USERNAME: ${{secrets.SF_USER}}
+            SNOWFLAKE_PASSWORD: ${{secrets.SNOWFLAKE_PASSWORD}}
+            SNOWFLAKE_WAREHOUSE: ${{secrets.SF_WAREHOUSE}}
+            SNOWFLAKE_ROLE: ${{secrets.SF_ROLE}}
+            SNOWFLAKE_DATABASE: ${{secrets.SF_DB}}
 
           run: |
             echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
@@ -35,4 +35,4 @@ jobs:
             
             echo "step2 : Running schemachange"
             echo "SF_PASSWOR : $SF_PASSWORD"
-            schemachange -f $GITHUB_WORKSPACE/snowflake_config -a $SF_ACCOUNT -u $SF_USER -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DB -c $SF_DB.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
+            schemachange -f $GITHUB_WORKSPACE/snowflake_config -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USERNAME -r $SNOWFLAKE_ROLE -w $SSNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE -c $SF_DB.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
