--- a/.github/workflows/schemachange_cicd.yml
+++ b/.github/workflows/schemachange_cicd.yml
@@ -35,4 +35,4 @@ jobs:
             
             echo "step2 : Running schemachange"
             echo "SF_PASSWORD : $SNOWFLAKE_PASSWORD"
-            schemachange -f $GITHUB_WORKSPACE/snowflake_config -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USERNAME -r $SNOWFLAKE_ROLE -w $SNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE -c $SNOWFLAKE_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
+            schemachange -f $GITHUB_WORKSPACE/snowflake_config -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USERNAME -r $SNOWFLAKE_ROLE -w $SNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE --create-change-history-table
